Enhance CSS styles and layout for assignment

--- a/Assets/Styles/index.css
+++ b/Assets/Styles/index.css
@@ -2,7 +2,7 @@ body {
   background-color: rgba(128, 128, 128, 0.603);
 }
 
-main{
+main {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,66 +10,27 @@ main{
   padding: 10px 30px;
 }
 
-#intro{
+#intro {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #DAA520;
+  background-color: #daa520;
   padding: 50px 20px;
   box-shadow: 0px 0px 5px 2px rgb(82, 82, 82);
   margin-bottom: 50px;
 }
 
-h1{
+h1 {
   margin-top: 0px;
 }
 
-#comments{
+#comments {
   font-size: 17px;
 }
 
-span{
+span {
   font-weight: bold;
-}
-
-#links{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.set{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin-bottom: 50px;
-  gap: 30px;
-}
-
-.click{
-  max-width: 300px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-/* #heading {
-  display: flex;
-  justify-content: center;
-}
-
-a {
-  text-decoration: none;
-  color: rgb(255, 115, 0);
 }
 
 #links {
@@ -78,23 +39,36 @@ a {
   align-items: center;
 }
 
+.set {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 50px;
+  gap: 30px;
+}
+
 .click {
-  padding: 30px;
-  margin: 20px;
-  background: linear-gradient(rgb(82, 82, 82), white);
-  box-shadow: 0px 0px 5px 2px rgb(82, 82, 82);
+  max-width: 300px;
 }
 
-p {
-  font-size: 20px;
-  font-weight: bolder;
-  justify-self: center;
-  padding: 10px;
-  margin: 0px;
-  text-align: center;
+button{
+  background-color: #daa520;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-#from {
-  background-color: white;
-  padding: 20px;
-} */
+a{
+  text-decoration: none;
+  color: black;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+@media (max-width: 600px) {
+  .set {
+    flex-direction: column;
+  }
+}
