--- a/Assets/Styles/CSS Ass 2.css
+++ b/Assets/Styles/CSS Ass 2.css
@@ -1,4 +1,85 @@
 body {
+  font-family: cursive;
+  background-color: black;
+}
+
+#one {
+  background-color: rgb(245, 244, 244);
+  padding: 20px;
+}
+
+#two {
+  border: 2px solid rgb(163, 161, 161);
+  padding: 20px;
+}
+
+#huckleberry {
+  background-color: white;
+  padding: 20px;
+  box-shadow: 5px 5px 15px 5px #cdcbcb;
+  margin-bottom: 10px;
+}
+
+#last {
+  background-color: white;
+  padding: 20px;
+  margin-bottom: 10px;
+}
+
+.dark {
+  background-color: gray;
+  padding: 30px 0px 0px 0px;
+}
+
+h2 {
+  background-color: orange;
+  font-size: 20px;
+  padding: 10px;
+  max-width: 350px;
+  margin: -15px 0px 0px -20px;
+  box-shadow: 0px 4px 0px 0px #d79406;
+}
+
+#final {
+  background-color: white;
+  height: 100px;
+}
+
+p{
+  font-size: 20px;
+}
+
+.adjust{
+  max-width: 450px;
+}
+
+.adjust-two{
+  max-width: 800px;
+}
+
+strong {
+  color: hsla(160, 100%, 30%, 1);
+}
+
+@media (max-width: 350px) {
+
+  h1 {
+    font-size: 20px;
+  }
+
+  h2{
+    font-size: 17px;
+  }
+  
+  p{
+    font-size: 15px;
+  }
+}
+
+
+
+
+/* body {
   background-color: black;
   font-family: cursive;
 }
@@ -72,4 +153,4 @@ h2 {
   margin-left: 20px;
   max-width: -webkit-fill-available;
   box-shadow: 5px 5px 15px 5px grey;
-}
+} */
