--- a/Assets/Styles/CSS Ass 3.css
+++ b/Assets/Styles/CSS Ass 3.css
@@ -6,11 +6,11 @@ body {
 #background {
   background-color: #a4a6d3;
   border: 10px solid white;
-  height: 500px;
+  height: 550px;
   display: grid;
   align-content: center;
   justify-items: center;
-  width: 800px;
+  max-width: 800px;
 }
 
 #img,
@@ -60,4 +60,35 @@ p{
 b{
     color: gray;
     font-size: 22px;
+}
+
+
+@media (max-width: 850px) {
+  #background {
+    max-width: 600px;
+  }
+}
+
+@media (max-width: 650px) {
+  img{
+    width: 350px;
+    height: 200px;
+  }
+  #content{
+    width: 350px;
+    margin: -50px 0px 0px -150px;
+    
+  }
+}
+
+@media (max-width: 400px) {
+  img{
+    width: 300px;
+    height: 200px;
+  }
+  #content{
+    width: 300px;
+    margin: -50px 0px 0px -200px;
+    
+  }
 }
