--- a/Assets/Styles/CSS Ass 3.css
+++ b/Assets/Styles/CSS Ass 3.css
@@ -6,89 +6,78 @@ body {
 #background {
   background-color: #a4a6d3;
   border: 10px solid white;
-  height: 550px;
-  display: grid;
-  align-content: center;
-  justify-items: center;
+  max-height: 550px;
   max-width: 800px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
 }
 
-#img,
 img {
-  width: 500px;
-  z-index: 1;
-  position: relative;
-  align-self: center;
+  width: 440px;
+  height: 200px;
   border-radius: 7px 7px 0px 0px;
-  height: 250px;
+  position: relative;
+  z-index: 1;
 }
 
 h3 {
   background-color: pink;
-  max-width: 200px;
-  height: 30px;
-  z-index: 2;
-  position: relative;
-  margin-bottom: -40px;
-  margin-left: -260px;
-  align-content: center;
-  text-align: center;
+  padding: 0px 0px 0px 10px;
   border-radius: 7px 25px 25px 7px;
+  position: relative;
+  max-width: 200px;
+  margin-bottom: -40px;
+  margin-left: -7px;
+  z-index: 2;
 }
 
 #content {
-  width: 500px;
   background-color: white;
-  margin-top: -5px;
+  margin-top: -7px;
   border-radius: 0px 0px 7px 7px;
+  max-width: 400px;
+  padding: 20px;
 }
 
 #Novus {
   font-size: 30px;
   font-weight: 900;
-  margin: 20px 0px 0px 20px;
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
 
-p{
-    margin-left: 20px;
-    font-size: 20px;
-    max-width: 400px;
-    padding-bottom: 15px;
-    margin-top: 5px;
+b {
+  color: gray;
+  font-size: 22px;
 }
 
-b{
-    color: gray;
-    font-size: 22px;
+p {
+  font-size: 18px;
+  margin: 0px;
 }
 
-
-@media (max-width: 850px) {
-  #background {
-    max-width: 600px;
+@media (max-width: 530px) {
+  img {
+    width: 100%;
+    height: auto;
   }
-}
 
-@media (max-width: 650px) {
-  img{
-    width: 350px;
-    height: 200px;
+  #content {
+    max-width: 100%;
+    padding: 15px;
   }
-  #content{
-    width: 350px;
-    margin: -50px 0px 0px -150px;
-    
-  }
-}
 
-@media (max-width: 400px) {
-  img{
-    width: 300px;
-    height: 200px;
+  #Novus {
+    font-size: 24px;
   }
-  #content{
-    width: 300px;
-    margin: -50px 0px 0px -200px;
-    
+
+  b {
+    font-size: 18px;
+  }
+  
+  p {
+    font-size: 16px;
   }
 }
